--- a/firebase.json
+++ b/firebase.json
@@ -16,5 +16,11 @@
         "npm --prefix \"$RESOURCE_DIR\" run build"
       ]
     }
-  ]
+  ],
+  "firestore": {
+    "rules": "functions/firestore.rules"
+  },
+  "storage": {
+    "rules": "storage.rules"
+  }
 }
