--- a/firebase.json
+++ b/firebase.json
@@ -18,7 +18,8 @@
     }
   ],
   "firestore": {
-    "rules": "functions/firestore.rules"
+    "rules": "functions/firestore.rules",
+    "indexes": "firestore.indexes.json"
   },
   "storage": {
     "rules": "storage.rules"
